Improve voice assistant and mandi price handling